--- a/client/test.html
+++ b/client/test.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="hi">123</div>
-    <button id="get">get</button>
+    <div id="login">123</div>
+    <button id="get">getLocation</button>
     <script defer>
-        document.getElementById('hi').addEventListener('click', async(e)=>{
+        document.getElementById('login').addEventListener('click', async(e)=>{
 
             const res = fetch('http://localhost:3000/users/login',
             {
